# kage-cpp

./: CMakeLists.txt  readme.md
include/: bezier.h  canva.h  contour.h  export.h  fitcurve.h  gothic.h  gwdata.h  kage.h  kagefont.h  mincho.h  point.h
kagetest/: main.cpp
src/: bezier.cpp  canva.cpp  contour.cpp  export.cpp  fitcurve.cpp  gothic.cpp  gwdata.cpp  kage.cpp  kagefont.cpp  mincho.cpp  point.cpp
